k8-9/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
spec:
  name: tharun
