k8-9/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: tharun
spec:
  replicas: 3
  selector:
    matchLabels:
      name: web
  template:
    metadata:
      labels:
        name: web
    spec:
      containers:
        - name: mywebcontainer
          image: nginx
          imagePullPolicy: Always
          resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          ports:
          - containerPort: 8080
