k8-9/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-app
  namespace: tharun
  labels:
    name: web
spec:
  containers:
  - name: mywebcontainer
    image: nginx
    imagePullPolicy: Always
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
