k8-9/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: tharun
spec:
  selector:
    name: web
  ports:
  - port: 8080
    targetPort:  8080
    protocol: TCP
